[package]
name = "tinytable-rs"
version = "0.3.1"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"
description = "The Query generator for SQLite"
documentation = "https://github.com/sukawasatoru/tinytable-rs"
homepage = "https://github.com/sukawasatoru/tinytable-rs"
repository = "https://github.com/sukawasatoru/tinytable-rs.git"

[dev-dependencies]
rusqlite = "=0.27.0"
